--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
                 line-height: 32px;
                 letter-spacing: 2px;
                 text-transform: uppercase;
-                color: var(--b-heading-color);
+                color: #FEFEFF;
             }
             .line{
                 display: flex;   
@@ -88,7 +88,7 @@ body {
         position: absolute;
         bottom: 30px;
         right: 130px;
-        z-index: -1;
+        z-index: 100;
     }
     .sec-1-button{
         width: 206px;
@@ -158,140 +158,6 @@ header{
         display: none;
     }
 }
-.container-wrap{
-    max-width: 1180px;
-    margin: 0 auto;
-    padding: 100px 0 80px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
-    .section-2{
-        display: flex;
-        flex-direction: row;
-        gap: 46px;
-
-        .sec-2-left{
-            position: relative;
-            .heading-wrap{
-                width: 617.5968017578125px;
-                height: 686px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                .heading-1{
-                    font-family: 'Work Sans',sans-serif;
-                    font-weight: 700;
-                    font-size: 36px;
-                    line-height: 44px;
-                    color: var(--b-heading-color-2);
-                    span{
-                        color: var(--a-main-color);
-                    }
-                }
-                .heading-2{
-                    font-family: 'Work Sans', sans-serif;
-                    font-weight: 400;
-                    font-size: 16px;
-                    line-height: 20px;
-                    color: var(--b-heading-color-2);
-                }
-            }
-            .sec-2-hero-wrap{
-                
-                .sec-2-hero{
-                    position: absolute;
-                    background-image: url(Asserts/sofa-hero.jpg);
-                    background-size: cover;
-                    border: 1px solid #C8E6C9;
-                    width: 594.758056640625px;
-                    height: 532px;
-                    bottom: 32px;
-                    z-index: 1;
-                }
-                .sec-2-hero-back{
-                    position: absolute;
-                    background-color: #C8E6C9;
-                    width: 581.4354858398438px;
-                    height: 536px;
-                    bottom: 0;
-                    right: 0;
-                    z-index: -1;
-                }
-                .sec-2-direction{
-                    display: flex;
-                    gap: 16px;
-                    position: absolute;
-                    bottom: 14px;
-                    right: 37px;
-                    .sec-2-hero-arr--1,.sec-2-hero-arr--2{
-                        z-index: 100000;
-                        height: 60px;
-                    }
-                
-                }
-            }
-        }
-        .sec-2-right{
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-            .sec-2-item{
-                display: flex;
-                flex-direction: row;
-                gap: 23px;
-                .item-hero{
-                    width: 192.22581481933594px;
-                    height: 202px;
-                }
-                .item-hero-0,.item-hero-1,.item-hero-2{
-                    background-size: cover;
-                    background-position: center;
-                }
-                .item-hero-0{
-                    background-image: url(Asserts/sofa-1.png);
-                }
-                .item-hero-1{
-                    background-image: url(Asserts/sofa-2.jpg);
-                }
-                .item-hero-2{
-                    background-image: url(Asserts/sofa-3.jpg);
-                }
-                .item-text{
-                    max-width: 302px;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 68px;
-                    .head-item{
-                        display: flex;
-                        flex-direction: column;
-                        gap: 10px;
-                        .heading{
-                            font-family: 'Work Sans', sans-serif;
-                            font-weight: 700;
-                            font-size: 24px;
-                            line-height: 32px;
-                            letter-spacing: 3px;
-                            color: var(--b-heading-color-2);
-                        }
-                        .text{
-                            font-family: 'Work Sans', sans-serif;
-                            font-weight: 400;
-                            font-size: 16px;
-                            line-height: 20px;
-                            color: var(--b-heading-color-2);
-                        }
-                    }
-                    .readmore{
-                    }
-                }
-                .spec-item-text{
-                    gap: 48px;
-                }
-            }
-        }
-    }
-}
-
 
 
 
@@ -445,12 +311,12 @@ header{
                 font-weight: 700;
                 font-size: 36px;
                 line-height: 44px;
-                color: #4B4B4B;
+                color: #4CAF50;
                 span {
+                    color: #4B4B4B;
                     font-weight: 700;
                     font-size: 36px;
                     line-height: 44px;
-                    color: #4CAF50;
                 }
             }
             .action {
@@ -487,6 +353,7 @@ header{
                 font-size: 16px;
                 line-height: 20px;
                 color: #4B4B4B;
+                opacity: 70%;
             }
         }
         .list {
