--- a/mobile.css
+++ b/mobile.css
@@ -20,7 +20,7 @@
         }
         .sec-1-direction{
             right: 60px;
-            top: 44%;
+            top: 40%;
             transition: all 0.5s ease;
             img{
                 width: 30px;
@@ -69,6 +69,8 @@
 
     header{
         padding: 0 60px 0 60px;
+        top: 28px;
+        border-bottom: 2px solid #4CAF50;
         .logo-header{
             color: white;
             transition: all 0.5s ease;
@@ -143,7 +145,6 @@
         }
     }
     header{
-        top: 20px;
         padding: 0 20px 0 20px;
         transition: all 0.5s ease;
         .logo-header{
@@ -162,7 +163,18 @@
 
 
 @media only screen and (max-width: 760px) {
-    
+    .section-1{
+        .sec-1-direction{
+            right: 60px;
+            top: 37%;
+            transition: all 0.5s ease;
+            img{
+                width: 30px;
+                height: 30px;
+            }
+        }
+        
+    }
     .container {
         width: 100%;
     .section2 {
